Correctifs section "The story behind its appearance"

--- a/styles/projects.css
+++ b/styles/projects.css
@@ -9,7 +9,7 @@ h2 {
 }
 
 main {
-    margin: 0 16vw;
+    margin: 0 18vw;
 }
 
 a {
